--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ background-color: black;
 color: blanchedalmond;
 font-size: 30px;
 }
-
+/* */
 h1 { color: green;
 position: absolute;
 text-align: left;
