--- a/index.css
+++ b/index.css
@@ -1,12 +1,13 @@
 .header {
 padding: 60x;
 text-align: center;
-background-color: black;
-color: blanchedalmond;
+background-color: #FFFFFF;
+color: #EDF3EA;
 font-size: 30px;
 }
-/* */
-h1 { color: green;
+
+h1 { 
+color: green;
 position: absolute;
 text-align: left;
 padding: 0 0 0 0;
