--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ font-size: 30px;
 }
 
 h1 { 
-color: green;
+color: #55FF00;
 position: absolute;
 text-align: left;
 padding: 0 0 0 0;
@@ -15,8 +15,8 @@ font-weight: bold;
 }
 
 body {
-background-color: black;
-color: green;
+background-color: #FFFFFF;
+color: #55FF00;
 font-family: Arial, sans-serif;
 margin: 0 4px 0 0;
 border: 6px solid;
