--- a/index.css
+++ b/index.css
@@ -1,23 +1,35 @@
 .header {
-padding: 60x;
+padding: 1px;
+position: -webkit-sticky;
+position: sticky;
+top: 0;
 text-align: center;
-background-color: #FFFFFF;
+background-color: #000000;
 color: #EDF3EA;
-font-size: 30px;
+font-family: "Lucida Console", Monaco, monospace;
+width: 100%;
+font-size: 40px;
 }
 
 body {
-background-color: #FFFFFF;
-color: #55FF00;
-font-family: Arial, sans-serif;
-margin: 0 4px 0 0;
-border: 6px solid;
+background-color: #000000;
+color: #EDF3EA;
+font-family: "Lucida Console", Monaco, monospace;
+font-size: 400px;
 background-image: url('smart_chimp.jpg');
+height: 100%;
+background-position: center;
+background-size: cover;
 }
 
 .fixed-footer {
-padding: 20x;
+position: relative;
+bottom: 1;
+padding: 5px;
 text-align: left;
+background-color: #000000;
 color: #EDF3EA;
-font-size: 10px;
+font-family: "Lucida Console", Monaco, monospace;
+width: 100%;
+font-size: 15px;
 }
